update code structure, replace some interfaces with abstract classes

--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,19 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+#stats {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+}
+
+#stats canvas {
+  width: max(100px, 10vw, 10vh);
+  height: max(60px, 6vh, 6vw);
+  user-select: none;
+}
+
 body {
   margin: 0;
   display: flex;
