--- a/src/style.css
+++ b/src/style.css
@@ -1,43 +1,100 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+    font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+    line-height: 1.5;
+    font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #f1f1f1;
+    color-scheme: light dark;
+    color: rgba(255, 255, 255, 0.87);
+    background-color: #f1f1f1;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  /* min-width: 320px; */
-  /* min-height: 100vh; */
+    margin: 0;
+    display: flex;
+    /* place-items: flex-start; */
+    flex-direction: column;
+    /* min-width: 320px; */
+    /* min-height: 70vh; */
 }
 
-/* a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+header {
+    display: flex;
+    place-items: center;
+    justify-content: left;
+    min-height: 8vh;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-} */
+p {
+    color: black;
+    margin: 0;
+}
 
-/* #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-} */
+.info {
+    display: flex;
+    min-width: 10rem;
+    margin: 0;
+    padding: 0 10px;
+    flex-direction: column;
+    text-align: center;
+    background-color: #cdcdcd;
+    border: 2px solid #333333;
+    box-sizing: border-box;
+}
+
+.info:first-child {
+    border-right: none;
+}
+
+.label {
+    font-size: 1rem;
+}
+
+.value {
+    font-weight: bold;
+    font-size: 1.25rem;
+    line-height: 1.25;
+}
+
+#app {
+    display: flex;
+    height: 75vh;
+    /* min-width: 100vmin;
+    min-height: 80vmax; */
+}
+
+footer {
+    display: flex;
+    /* height: 16vh; */
+}
+
+footer .info {
+    padding: 5px 0;
+}
+
+.buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.btn {
+    /* padding: 10px; */
+    border: 2px solid black;
+    line-height: 30px;
+    color: black;
+    background-color: #eee;
+    font-weight: bold;
+    font-size: 2.5rem;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+}
+
+@media (orientation: portrait) {
+    
+}
